PyMaker/datas/object2/RawHTML/i13001/Python_DOC_referPages.how-to-use-uuid-lib-with-mod-wsgi.txt
<div class="post-text" itemprop="text">
<p>This is the traceback:</p>
<pre><code>mod_wsgi: Target WSGI script '/[..]/project/wsgi.py' cannot be loaded as Python module.
mod_wsgi: Exception occurred processing WSGI script '/[..]/project/wsgi.py'.

Traceback (most recent call last):
   File "/home/ubuntu/api/api/wsgi.py", line 11, in &lt;module&gt;
     import uuid as uuid
   File "/home/ubuntu/.virtualenvs/api/lib/python3.4/site-packages/uuid.py", line 138
     if not 0 &lt;= time_low &lt; 1&lt;&lt;32L:
                                 ^
 SyntaxError: invalid syntax
</code></pre>
<p>Not sure where the problem lies... has the uuid.py lib a bug?</p>
</div>
<div class="post-text" itemprop="text">
<p>uuid is bundled with python since version 2.5, see <a href="https://docs.python.org/2/library/uuid.html" rel="nofollow">docs</a>, you should not install it in your virtual environment.</p>
<p>There is no need to install it.</p>
</div>
<div class="post-text" itemprop="text">
<p>After wrestling with this today, what solved it for me was actually <a href="https://stackoverflow.com/questions/33612977/how-to-use-uuid-lib-with-mod-wsgi#comment55000535_33612977">Daniel Roseman's comment</a>.</p>
<p>If you're getting this error in Python 3, it's because you've inadvertently installed the <a href="https://pypi.python.org/pypi/uuid/" rel="nofollow noreferrer"><code>uuid</code> Python 2 backport</a>, which is masking the <a href="https://docs.python.org/3/library/uuid.html" rel="nofollow noreferrer">standard library <code>uuid</code></a>, which is what you presumably want to import.</p>
<p>So: </p>
<ol>
<li>Run <code>pip uninstall uuid</code> to uninstall the extraneous backport.</li>
<li>Make sure none of your packages list <code>uuid</code> as a requirement for python versions greater than 2.5.</li>
</ol>
</div>
<span class="comment-copy">What "uuid lib" are you using?</span>
<span class="comment-copy">uuid==1.30 Django==1.8.3</span>
<span class="comment-copy">That is a backport of a module that has been in the standard library since version 2.5. It is certainly included in Python 3.4, which you are using. The version you are trying to run doesn't work in Python 3.</span>
<span class="comment-copy">No wonder I could not find uuid.py for python3 xD Thanks!!</span>
<span class="comment-copy">Excelllent, thanks a lot!!</span>
